# stockAnalyzer

./: big_five_stocks.csv  main.py  pyproject.toml
